--- a/landing_for_it_class/index.html
+++ b/landing_for_it_class/index.html
@@ -12,11 +12,11 @@
 <body>
 <main>
 
-        <div class="container-fluid header">
-            <div class="row">
-                <div class="col-4">
-                    <div class="logo">
-                        <svg viewBox="0 0 975 645" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div class="container-fluid header">
+        <div class="row">
+            <div class="col-4">
+                <div class="header__logo">
+                    <svg viewBox="0 0 975 645" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M165 168C165 166.343 166.343 165 168 165H288C302.912 165 315 177.088 315 192V288C315 302.912 302.912 315 288 315H192C177.088 315 165 302.912 165 288V168Z" fill="#17A2B8"/>
 <path d="M330 168C330 166.343 331.343 165 333 165H453C467.912 165 480 177.088 480 192V288C480 302.912 467.912 315 453 315H357C342.088 315 330 302.912 330 288V168Z" fill="#17A2B8"/>
 <path d="M330 333C330 331.343 331.343 330 333 330H453C467.912 330 480 342.088 480 357V453C480 467.912 467.912 480 453 480H357C342.088 480 330 467.912 330 453V333Z" fill="#17A2B8"/>
@@ -35,18 +35,21 @@
 <path d="M733.689 393C742.489 393 749.489 395.44 754.689 400.32C759.969 405.12 762.609 411.12 762.609 418.32C762.609 427.76 759.089 435.16 752.049 440.52C745.009 445.88 736.289 448.56 725.889 448.56C715.569 448.56 707.249 446.36 700.929 441.96L702.849 429.48C709.489 434.36 717.169 436.8 725.889 436.8C731.969 436.8 737.369 435.28 742.089 432.24C746.889 429.28 749.289 424.84 749.289 418.92C749.289 414.44 747.449 410.76 743.769 407.88C740.089 405 735.049 403.56 728.649 403.56C722.889 403.56 716.609 404.52 709.809 406.44L721.689 363H765.489L763.809 374.64H729.849L724.569 393.84C726.889 393.28 729.929 393 733.689 393Z" fill="white"/>
 <path d="M918.729 405.56C928.089 409.4 932.769 415.84 932.769 424.88C932.769 432.8 929.529 439.08 923.049 443.72C916.729 448.28 908.449 450.56 898.209 450.56C893.249 450.56 888.409 449.72 883.689 448.04C879.129 446.44 875.129 443.72 871.689 439.88C868.329 436.04 866.649 431.48 866.649 426.2C866.649 420.6 868.449 415.76 872.049 411.68C875.649 407.52 880.569 404.68 886.809 403.16C879.849 399.64 876.369 394.2 876.369 386.84C876.369 379.88 879.249 374.24 885.009 369.92C890.769 365.6 897.649 363.44 905.649 363.44C913.009 363.44 919.609 365.36 925.449 369.2C931.369 372.96 934.329 378.32 934.329 385.28C934.329 390 932.929 394.16 930.129 397.76C927.329 401.28 923.529 403.88 918.729 405.56ZM905.289 374.48C901.129 374.48 897.329 375.64 893.889 377.96C890.609 380.28 888.969 383.52 888.969 387.68C888.969 391.44 890.529 394.44 893.649 396.68C896.849 398.92 900.569 400.04 904.809 400.04C908.969 400.04 912.769 398.88 916.209 396.56C919.569 394.16 921.249 390.88 921.249 386.72C921.249 383.04 919.689 380.08 916.569 377.84C913.529 375.6 909.769 374.48 905.289 374.48ZM919.209 424.04C919.209 420.04 917.369 416.72 913.689 414.08C910.089 411.44 905.569 410.12 900.129 410.12C894.849 410.12 890.249 411.48 886.329 414.2C882.489 416.84 880.569 420.48 880.569 425.12C880.569 429.44 882.449 432.92 886.209 435.56C890.129 438.12 894.609 439.4 899.649 439.4C904.769 439.4 909.289 438.04 913.209 435.32C917.209 432.52 919.209 428.76 919.209 424.04Z" fill="white"/>
 </svg>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <a href="http://it-class1158.ru/test_applicant/" class="link-to-join">Поступить в It класс</a>
-                </div>
-                <div class="col-4">
-                    <span class="creator-name">Сделано учеником It класса<br>
-                        Хамид Карим
-                    </span>
                 </div>
             </div>
+            <div class="col-4 justify-content-center">
+                <a href="http://it-class1158.ru/test_applicant/" class="link-to-join">Поступить в It класс</a>
+            </div>
+            <div class="col-4 justify-content-end">
+                <div class="header__creator-name__container">
+                    <span class="header__creator-name">Сделано учеником It класса<br>
+                    Хамид Карим
+                </span>
+                </div>
+
+            </div>
         </div>
+    </div>
 
 
 
@@ -54,9 +57,15 @@
 
     <section class="main-section">
         <h1>Неделя информатики!</h1>
+        <a href="#about" class="main-section__arrow">
+            <svg class="main-section__arrow" viewBox="0 0 16 151" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M7.2929 150.707C7.68342 151.098 8.31659 151.098 8.70711 150.707L15.0711 144.343C15.4616 143.953 15.4616 143.319 15.0711 142.929C14.6805 142.538 14.0474 142.538 13.6569 142.929L8.00001 148.586L2.34315 142.929C1.95263 142.538 1.31946 142.538 0.928938 142.929C0.538414 143.319 0.538414 143.953 0.928938 144.343L7.2929 150.707ZM7 4.37114e-08L7.00001 150L9.00001 150L9 -4.37114e-08L7 4.37114e-08Z" fill="white"/>
+            </svg>
+        </a>
+
     </section>
 
-    <section class="about">
+    <section id="about">
         <h2>Что тут происходит?</h2>
         Тут будет заголовок
     </section>
