IT класс: сделано расписание

--- a/landing_for_it_class/index.html
+++ b/landing_for_it_class/index.html
@@ -62,8 +62,266 @@
     </section>
 
     <section id="about">
-        <h2>Что тут происходит?</h2>
-        Тут будет заголовок
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="about__text">
+                        <h2 class="about__text__header">О неделе</h2>
+                        <p class="about__text__paragraph">
+                            Транзи́стор (англ. transistor), полупроводнико́вый трио́д — радиоэлектронный компонент из полупроводникового материала,
+                            обычно с тремя выводами[1], способный от небольшого входного сигнала управлять значительным током в выходной цепи,
+                            что позволяет использовать его для усиления, генерирования, коммутации и преобразования электрических сигналов.
+                            <br> <br>
+                            В настоящее время транзистор является основой схемотехники подавляющего большинства электронных устройств и интегральных микросхем.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-5 offset-md-1">
+                    <div class="about__image-container">
+                        <img src="img/Заглушка.svg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="timetable">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="timetable__header">Расписание</h2>
+
+                    <div class="timetable__container">
+                        <a href="#monday" class="timetable__link">
+                            Понельник
+                        </a>
+                        <a href="#tuesday" class="timetable__link">
+                            Вторник
+                        </a>
+                        <a href="#wednesday" class="timetable__link">
+                            Среда
+                        </a>
+                        <a href="#thursday" class="timetable__link">
+                            Четверг
+                        </a>
+                        <a href="#friday" class="timetable__link">
+                            Пятница
+                        </a>
+                        <a href="#saturday" class="timetable__link">
+                            Суббота
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row timetable__dates">
+                    <div class="col-md-4 timetable__dates__name-of-date">
+                        <h3>Понедельник</h3>
+                    </div>
+
+                    <div class="col-md-8">
+                        <div class="timetable__dates__events-list" id="monday">
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
+                                <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Раздают))</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4 timetable__dates__name-of-date">
+                        <h3>Вторник</h3>
+                    </div>
+
+                    <div class="col-md-8">
+                        <div class="timetable__dates__events-list" id="tuesday">
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
+                                <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Раздают))</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4 timetable__dates__name-of-date">
+                        <h3>Среда</h3>
+                    </div>
+
+                    <div class="col-md-8">
+                        <div class="timetable__dates__events-list" id="wednesday">
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
+                                <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Раздают))</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4 timetable__dates__name-of-date">
+                        <h3>Четверг</h3>
+                    </div>
+
+                    <div class="col-md-8">
+                        <div class="timetable__dates__events-list" id="thursday">
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
+                                <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Раздают))</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4 timetable__dates__name-of-date">
+                        <h3>Пятница</h3>
+                    </div>
+
+                    <div class="col-md-8">
+                        <div class="timetable__dates__events-list" id="friday">
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
+                                <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Раздают))</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4 timetable__dates__name-of-date">
+                        <h3>Суббота</h3>
+                    </div>
+
+                    <div class="col-md-8">
+                        <div class="timetable__dates__events-list" id="saturday">
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
+                                <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Раздают))</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                            <div class="timetable__dates__events-list__element">
+                                <div class="timetable__dates__events-list__element__time">16:00 - 17:00</div>
+                                <div class="timetable__dates__events-list__element__name">Турнир Vex</div>
+                                <div class="timetable__dates__events-list__element__open-more">Подробнее</div>
+                                <div class="timetable__dates__events-list__element__more-text">Какой-то турнир, который дает баллы</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+            </div>
+
+        </div>
     </section>
 
 </main>
