IT класс: сделано расписание

--- a/landing_for_it_class/index.html
+++ b/landing_for_it_class/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col-4 justify-content-end">
                 <div class="header__creator-name__container">
-                    <span class="header__creator-name">Сделано учеником It класса<br>
+                    <span class="header__creator-name">Создано учеником It класса<br>
                     Хамид Карим
                 </span>
                 </div>
