IT класс: Сделана страница

--- a/landing_for_it_class/index.html
+++ b/landing_for_it_class/index.html
@@ -92,35 +92,35 @@
                     <h2 class="timetable__header">Расписание</h2>
 
                     <div class="timetable__container">
-                        <a href="#monday" class="timetable__link">
+                        <a href="#monday" class="timetable__link order-0">
                             Понельник
                         </a>
-                        <a href="#tuesday" class="timetable__link">
+                        <a href="#tuesday" class="timetable__link order-2">
                             Вторник
                         </a>
-                        <a href="#wednesday" class="timetable__link">
+                        <a href="#wednesday" class="timetable__link order-4">
                             Среда
                         </a>
-                        <a href="#thursday" class="timetable__link">
+                        <a href="#thursday" class="timetable__link order-1">
                             Четверг
                         </a>
-                        <a href="#friday" class="timetable__link">
+                        <a href="#friday" class="timetable__link order-3">
                             Пятница
                         </a>
-                        <a href="#saturday" class="timetable__link">
+                        <a href="#saturday" class="timetable__link order-5">
                             Суббота
                         </a>
                     </div>
                 </div>
             </div>
 
-            <div class="row timetable__dates">
+                <div id="monday" class="row timetable__dates mt-5">
                     <div class="col-md-4 timetable__dates__name-of-date">
                         <h3>Понедельник</h3>
                     </div>
 
                     <div class="col-md-8">
-                        <div class="timetable__dates__events-list" id="monday">
+                        <div class="timetable__dates__events-list">
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
                                 <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
@@ -147,14 +147,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
 
+                <div id="tuesday" class="row timetable__dates">
                     <div class="col-md-4 timetable__dates__name-of-date">
                         <h3>Вторник</h3>
                     </div>
 
                     <div class="col-md-8">
-                        <div class="timetable__dates__events-list" id="tuesday">
+                        <div class="timetable__dates__events-list">
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
                                 <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
@@ -181,14 +183,15 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
-
+                <div id="wednesday" class="row timetable__dates">
                     <div class="col-md-4 timetable__dates__name-of-date">
                         <h3>Среда</h3>
                     </div>
 
                     <div class="col-md-8">
-                        <div class="timetable__dates__events-list" id="wednesday">
+                        <div class="timetable__dates__events-list">
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
                                 <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
@@ -215,14 +218,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
 
+                <div id="thursday" class="row timetable__dates">
                     <div class="col-md-4 timetable__dates__name-of-date">
                         <h3>Четверг</h3>
                     </div>
 
                     <div class="col-md-8">
-                        <div class="timetable__dates__events-list" id="thursday">
+                        <div class="timetable__dates__events-list">
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
                                 <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
@@ -249,14 +254,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
 
+                <div id="friday" class="row timetable__dates">
                     <div class="col-md-4 timetable__dates__name-of-date">
                         <h3>Пятница</h3>
                     </div>
 
                     <div class="col-md-8">
-                        <div class="timetable__dates__events-list" id="friday">
+                        <div class="timetable__dates__events-list">
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
                                 <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
@@ -283,14 +290,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
 
+                <div id="saturday" class="row timetable__dates">
                     <div class="col-md-4 timetable__dates__name-of-date">
                         <h3>Суббота</h3>
                     </div>
 
                     <div class="col-md-8">
-                        <div class="timetable__dates__events-list" id="saturday">
+                        <div class="timetable__dates__events-list">
                             <div class="timetable__dates__events-list__element">
                                 <div class="timetable__dates__events-list__element__time">8:30 - 9:00</div>
                                 <div class="timetable__dates__events-list__element__name">Раздача наставлений</div>
@@ -317,11 +326,10 @@
                             </div>
                         </div>
                     </div>
-
+                </div>
 
             </div>
 
-        </div>
     </section>
 
 </main>
